--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        江奕承
+                        <br><span class="text-primary">Jiang Yi-cheng</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        台北市文山區木新路229號(0965007972)
+                        <br><a href="mailto:name@email.com">A109070016@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"> 我是個網頁設計初學者，希望能在這次課程學到些什麼，我目前就讀世新大學資訊傳播學系一年級。</p>
+                    <p class="lead mb-5"> I am a beginner in web design and I hope to learn something in this course. I am currently studying in the first year of the Department of Information and Communication at Shih Hsin University.。</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
