--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <br><a href="mailto:name@email.com">A109070016@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5"> 我是個網頁設計初學者，希望能在這次課程學到些什麼，我目前就讀世新大學資訊傳播學系一年級。</p>
-                    <p class="lead mb-5"> I am a beginner in web design and I hope to learn something in this course. I am currently studying in the first year of the Department of Information and Communication at Shih Hsin University.。</p>
+                    <p class="lead mb-5"> I am a beginner in web design and I hope to learn something in this course. I am currently studying in Shih Hsin University.I major Information Communication.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
