--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                     <p class="lead mb-5"> I am a beginner in web design and I hope to learn something in this course. I am currently studying in Shih Hsin University.I major Information Communication.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/A109070016"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100000436561065"><i class="fab fa-facebook-f"></i></a>
+						<a class="social-icon" href="https://www.instagram.com/ov2243c/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
