--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">腦殘幫</a></li>
+					
                 </ul>
             </div>
         </nav>
@@ -219,6 +221,12 @@
                             3
                             <sup>rd</sup>
                             Place - James Buchanan High School - Hackathon 2005
+		<hr class="m-0" />
+            <section class="resume-section" id="腦殘幫">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">腦殘幫</h2>
+					<ul class="fa-ul mb-0">
+                        <li><a href="https://dudukk0808.github.io/">陳玄浩</a></li>
                         </li>
                     </ul>
                 </div>
