--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                     <h2 class="mb-5">Interests</h2>
 					<ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fas fa-thumbs-down"></i>
+						<li class="list-inline-item"><i class="fas fa-cheese"></i>
+						<li class="list-inline-item"><i class="fas fa-running"></i>
+						<li class="list-inline-item"><i class="fas fa-gamepad"></i>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
@@ -216,11 +219,12 @@
                             Place - James Buchanan High School - Hackathon 2005
 						</li>	
 			</section>
+			<!--腦殘幫-->
 		<hr class="m-0" />
             <section class="resume-section" id="腦殘幫">
                 <div class="resume-section-content">
                     <h2 class="mb-5">腦殘幫</h2>
-					<ul class="fa-ul mb-0">
+					<ul class="fa-ul list-group list-group-flush">
                         <li><a href="https://dudukk0808.github.io/">陳玄浩</a></li>
                     </ul>
                 </div>
