--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
 						</li>	
 			</section>
 			<!--腦殘幫-->
-		<hr class="m-0" />
-            <section class="resume-section" id="腦殘幫">
+		<section class="resume-section" id="腦殘幫">
                 <div class="resume-section-content">
                     <h2 class="mb-5">腦殘幫</h2>
+					<ul class="fa-ul list-group list-group-flush">
 					<ul class="fa-ul list-group list-group-flush">
                         <li><a href="https://dudukk0808.github.io/">陳玄浩</a></li>
                     </ul>
