--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                             Place - James Buchanan High School - Hackathon 2005
 						</li>	
 			</section>
+			<hr class="m-0" />
 			<!--腦殘幫-->
 		<section class="resume-section" id="腦殘幫">
                 <div class="resume-section-content">
