--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#腦殘幫">腦殘幫</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#orphan">orphan</a></li>
 					
                 </ul>
             </div>
@@ -221,9 +221,9 @@
 			</section>
 			<hr class="m-0" />
 			<!--腦殘幫-->
-		<section class="resume-section" id="腦殘幫">
+		<section class="resume-section" id="orphan">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">腦殘幫</h2>
+                    <h2 class="mb-5">orphan</h2>
 					<ul class="fa-ul list-group list-group-flush">
 					<li class="list-group-item"><a href="https://dudukk0808.github.io/">陳玄浩</a></li>
                     </ul>
