--- a/index.html
+++ b/index.html
@@ -129,6 +129,56 @@
                 </div>
             </section>
             <hr class="m-0" />
+			
+			 <!--Research Interests-->
+            <section class="resume-section" id="research">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Research</h2>
+					<ul class="fa-ul list-group list-group-flush">
+			            <li class="list-group-item">
+				            <i class="fas fa-cogs"></i>
+							<span class="text-primary small-text">網頁設計</span>
+							<span class="small-text">Web Design</span>
+			            </li>
+						<li class="list-group-item">
+						    <i class="fas fa-search"></i>
+							<span class="text-primary small-text">資訊檢索</span>
+							<span class="small-text">Information Retrieval</span>
+			            </li>
+						<li class="list-group-item">
+						    <i class="fas fa-file-contract"></i>
+							<span class="text-primary small-text">資料探勘、文本探勘</span>							
+							<span class="small-text">Data mining &amp; Text mining</span>
+						</li>
+						<li class="list-group-item">
+							<i class="fas fa-temperature-low"></i>
+							<span class="text-primary small-text">科學計量學、資訊計量學</span>
+							<span class="small-text">Scientometrics &amp; Informetrics</span>
+						</li>
+						<li class="list-group-item">
+							<i class="far fa-chart-bar"></i>
+							<span class="text-primary small-text">資訊視覺化</span>
+							<span class="small-text">Information Visualization</span>
+						</li>
+						<li class="list-group-item">
+							<i class="fab fa-connectdevelop"></i>
+							<span class="text-primary small-text">社會網路分析</span>
+							<span class="small-text">Social Network Analysis</span>
+						</li>
+						<li class="list-group-item">
+							<i class="fas fa-network-wired"></i>
+							<span class="text-primary small-text">網站規劃與設計</span>
+							<span class="small-text">Website Planning &amp; Design</span>
+						</li>
+						<li class="list-group-item">
+							<i class="fas fa-users"></i>
+							<span class="text-primary small-text">使用者經驗研究</span>
+							<span class="small-text">User Experience Design</span>
+						</li>
+					</ul>
+				</div>
+			</section>
+            <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
