--- a/index.html
+++ b/index.html
@@ -142,39 +142,34 @@
 							<span class="small-text">Web Design</span>
 			            </li>
 						<li class="list-group-item">
-						    <i class="fas fa-search"></i>
-							<span class="text-primary small-text">資訊檢索</span>
-							<span class="small-text">Information Retrieval</span>
+						    <i class="fas fa-film"></i>
+							<span class="text-primary small-text">影片後製</span>
+							<span class="small-text">Film post-production</span>
 			            </li>
 						<li class="list-group-item">
-						    <i class="fas fa-file-contract"></i>
-							<span class="text-primary small-text">資料探勘、文本探勘</span>							
-							<span class="small-text">Data mining &amp; Text mining</span>
+						    <<i class="fab fa-steam"></i>
+							<span class="text-primary small-text">遊戲企劃人員</span>							
+							<span class="small-text">Game planner</span>
 						</li>
 						<li class="list-group-item">
-							<i class="fas fa-temperature-low"></i>
-							<span class="text-primary small-text">科學計量學、資訊計量學</span>
-							<span class="small-text">Scientometrics &amp; Informetrics</span>
+							<i class="fas fa-file-code"></i>
+							<span class="text-primary small-text">演算法開發工程師</span>
+							<span class="small-text">Algorithm Development Engineer</span>
 						</li>
 						<li class="list-group-item">
-							<i class="far fa-chart-bar"></i>
-							<span class="text-primary small-text">資訊視覺化</span>
-							<span class="small-text">Information Visualization</span>
+							<i class="fas fa-chalkboard-teacher"></i>
+							<span class="text-primary small-text">電腦程式老師</span>
+							<span class="small-text">Computer program teacher</span>
 						</li>
 						<li class="list-group-item">
-							<i class="fab fa-connectdevelop"></i>
-							<span class="text-primary small-text">社會網路分析</span>
-							<span class="small-text">Social Network Analysis</span>
+							<i class="fas fa-search-dollar"></i>
+							<span class="text-primary small-text">行銷企劃人員</span>
+							<span class="small-text">Marketing planner</span>
 						</li>
 						<li class="list-group-item">
-							<i class="fas fa-network-wired"></i>
-							<span class="text-primary small-text">網站規劃與設計</span>
-							<span class="small-text">Website Planning &amp; Design</span>
-						</li>
-						<li class="list-group-item">
-							<i class="fas fa-users"></i>
-							<span class="text-primary small-text">使用者經驗研究</span>
-							<span class="small-text">User Experience Design</span>
+							<i class="fas fa-robot"></i>
+							<span class="text-primary small-text">AI人工智慧工程師</span>
+							<span class="small-text">AI artificial intelligence engineer</span>
 						</li>
 					</ul>
 				</div>
