--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							<span class="small-text">Film post-production</span>
 			            </li>
 						<li class="list-group-item">
-						    <<i class="fab fa-steam"></i>
+						    <i class="fab fa-steam"></i>
 							<span class="text-primary small-text">遊戲企劃人員</span>							
 							<span class="small-text">Game planner</span>
 						</li>
