--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="subheading mb-3">世新大學資訊傳播學系 Department of Information Communications, Shih-Hsin University</div>
 						</div>
 						<div class="resume-date text-md-right">
-						    <span class="text-primary">Sept. 1997 - </span>
+						    <span class="text-primary">Sept. 2020 - </span>
 						</div>
 					</div>
 					
@@ -87,7 +87,7 @@
 						    <div class="subheading mb-3">長億高中 cyhs</div>
 					    </div>
 					    <div class="resume-date text-md-right">
-					        <span class="text-primary">Sept. 2017 - </span>
+					        <span class="text-primary">Sept. 2017 - 2020 </span>
 					    </div>
 					</div>
 				
