--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
 					        <span class="text-primary">Sept. 2017 - 2020 </span>
 					    </div>
 					</div>
+			
+					<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+					    <div class="resume-content">
+						    <h3 class="mb-0">服務員 Waiter</h3>
+							<div class="subheading mb-3">麥當勞 McDonald's</div>
+						</div>
+						<div class="resume-date text-md-right">
+						    <span class="text-primary">Sept. 2021 - </span>
+						</div>
 				
             </section>
             <hr class="m-0" />
