--- a/index.html
+++ b/index.html
@@ -108,20 +108,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                            <h3 class="mb-0">Changyi High Schoo</h3>
+                            <div class="subheading mb-3">General</div>
+                            <div>higher school certificate</div>
+                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2017 - Jan. 2020</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Shih Hsin University</h3>
+                            <div class="subheading mb-3">Master of Design</div>
+                            <div>Department of Information and Communication</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 1989 - June 1991</span></div>
                     </div>
                 </div>
             </section>
