--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <div class="subheading mb-3">Master of Design</div>
                             <div>Department of Information and Communication</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept. 1989 - June 1991</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2021 -</span></div>
                     </div>
                 </div>
             </section>
@@ -169,6 +169,56 @@
 					</ul>
 				</div>
 			</section>
+            <hr class="m-0" />
+		<!-- Publications-->
+            <section class="resume-section" id="publications">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publications</h2>
+					<div id="accordion">
+						<div class="card">
+							<div class="card-header">
+								<a class="card-link" data-toggle="collapse" href="#collapseOne">
+									List 清單
+								</a>
+							</div>
+							<div id="collapseOne" class="collapse show" data-parent="#accordion">
+								<div class="card-body">
+									<table class="table table-hover">
+										<thead>
+											<tr>
+												<th>項目</th>
+												<th>預計達成時間</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>打工</td>
+												<td>已達成</td>
+											</tr>
+											<tr>
+												<td>存到30W</td>
+												<td>2022/5</td>
+											</tr>
+											<tr>
+												<td>進入瘋狗娛樂實習</td>
+												<td>2023</td>
+											</tr>
+											<tr>
+												<td>成為獨立影像創作者</td>
+												<td>2025</td>
+											</tr>
+											<tr>
+												<td>進入夢想產業</td>
+												<td>2026</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+
+                </div>
+            </section>
             <hr class="m-0" />
 			
             <!-- Skills-->
