--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <hr class="m-0" />
 			
 			 <!--Research Interests-->
-            <section class="resume-section" id="research">
+            <section class="resume-section" id="specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research</h2>
 					<ul class="fa-ul list-group list-group-flush">
