--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			 <!--Research Interests-->
             <section class="resume-section" id="specialties">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Research</h2>
+                    <h2 class="mb-5">Specialties</h2>
 					<ul class="fa-ul list-group list-group-flush">
 			            <li class="list-group-item">
 				            <i class="fas fa-cogs"></i>
