--- a/index.html
+++ b/index.html
@@ -143,29 +143,9 @@
 							<span class="small-text">Film post-production</span>
 			            </li>
 						<li class="list-group-item">
-						    <i class="fab fa-steam"></i>
-							<span class="text-primary small-text">遊戲企劃人員</span>							
-							<span class="small-text">Game planner</span>
-						</li>
-						<li class="list-group-item">
-							<i class="fas fa-file-code"></i>
-							<span class="text-primary small-text">演算法開發工程師</span>
-							<span class="small-text">Algorithm Development Engineer</span>
-						</li>
-						<li class="list-group-item">
-							<i class="fas fa-chalkboard-teacher"></i>
-							<span class="text-primary small-text">電腦程式老師</span>
-							<span class="small-text">Computer program teacher</span>
-						</li>
-						<li class="list-group-item">
-							<i class="fas fa-search-dollar"></i>
-							<span class="text-primary small-text">行銷企劃人員</span>
-							<span class="small-text">Marketing planner</span>
-						</li>
-						<li class="list-group-item">
-							<i class="fas fa-robot"></i>
-							<span class="text-primary small-text">AI人工智慧工程師</span>
-							<span class="small-text">AI artificial intelligence engineer</span>
+						    <i class="fas fa-camera"></i>
+							<span class="text-primary small-text">攝影</span>							
+							<span class="small-text">Photographer</span>
 						</li>
 					</ul>
 				</div>
