--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 		 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#specialties">Specialties</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#UniversityLifeList">UniversityLifeList</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#orphan">orphan</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Friends">Friends</a></li>
 					
                 </ul>
             </div>
@@ -74,16 +74,6 @@
                     <h2 class="mb-5">Experience</h2>
 					<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
 					    <div class="resume-content">
-						    <h3 class="mb-0">大學一年級 Freshman</h3>
-							<div class="subheading mb-3">世新大學資訊傳播學系 Department of Information Communications, Shih-Hsin University</div>
-						</div>
-						<div class="resume-date text-md-right">
-						    <span class="text-primary">Sept. 2020 - </span>
-						</div>
-					</div>
-					
-					<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					    <div class="resume-content">
 						    <h3 class="mb-0">生物小老師 biological assistant Manager</h3>
 						    <div class="subheading mb-3">長億高中 cyhs</div>
 					    </div>
@@ -107,14 +97,7 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Changyi High Schoo</h3>
-                            <div class="subheading mb-3">General</div>
-                            <div>higher school certificate</div>
-                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2017 - Jan. 2020</span></div>
-                    </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Shih Hsin University</h3>
@@ -123,11 +106,18 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2021 -</span></div>
                     </div>
+			                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Changyi High School</h3>
+                            <div class="subheading mb-3">General</div>
+                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2017 - Jan. 2020</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
 			
-			 <!--Research Interests-->
+			 <!--Specialties-->
             <section class="resume-section" id="specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Specialties</h2>
@@ -140,7 +130,7 @@
 						<li class="list-group-item">
 						    <i class="fas fa-film"></i>
 							<span class="text-primary small-text">影片後製</span>
-							<span class="small-text">Film post-production</span>
+							<span class="small-text">Film Editing</span>
 			            </li>
 						<li class="list-group-item">
 						    <i class="fas fa-camera"></i>
@@ -151,10 +141,10 @@
 				</div>
 			</section>
             <hr class="m-0" />
-		<!-- Publications-->
-            <section class="resume-section" id="publications">
+		<!-- UniversityLifeList-->
+            <section class="resume-section" id="UniversityLifeList">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Publications</h2>
+                    <h2 class="mb-5">UniversityLifeList</h2>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header">
@@ -210,7 +200,6 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fas fa-hamburger"></i></i>
 			<li class="list-inline-item"><i class="fab fa-python"></i></li>
                     </ul>
                 </div>
@@ -243,9 +232,9 @@
 			</section>
 			<hr class="m-0" />
 			<!--腦殘幫-->
-		<section class="resume-section" id="orphan">
+		<section class="resume-section" id="Friends">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">orphan</h2>
+                    <h2 class="mb-5">Friends</h2>
 					<ul class="fa-ul list-group list-group-flush">
 					<li class="list-group-item"><a href="https://dudukk0808.github.io/">陳玄浩</a></li>
 					<li class="list-group-item"><a href="https://young-70.github.io/">楊麒麟</a></li>
