--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#UniversityLifeList">UniversityLifeList</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+		<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Portfolios</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Friends">Friends</a></li>
 					
