--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Shih Hsin University</h3>
-                            <div class="subheading mb-3">bachelor degree</div>
+                            <div class="subheading mb-3">Bachelor Degree</div>
                             <div>Department of Information and Communication</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2021 -</span></div>
